--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <title>Micaio</title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\micai\Documents\arquivos html\css.css"/>
+	<link rel="stylesheet" type="text/css" href="C:\Users\micai\Desktop\git\site\css.css"/>
 
 </head>
 <body>
